Added data_preprocessor and informations about project setup

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ####==== git ignore for project structure ===####
 /.venv/
 /data/
+/.kaggle/
 
 
 ####==== git ignore for Python bytecode files ===####
