--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,63 @@
-kaggle
-pytorch-lightning
-
-scikit-learn==1.3.2
-matplotlib==3.8.2
-
-pandas==2.1.4
-tqdm==4.66.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+attrs==25.4.0
+black==25.12.0
+bleach==6.3.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.20.0
+fonttools==4.61.1
+frozenlist==1.8.0
+fsspec==2025.12.0
+idna==3.11
+jinja2==3.1.6
+joblib==1.5.3
+kaggle==1.8.3
+kagglesdk==0.1.14
+kiwisolver==1.4.9
+librt==0.7.8
+lightning-utilities==0.15.2
+markupsafe==2.1.5
+matplotlib==3.10.8
+mpmath==1.3.0
+multidict==6.7.0
+mypy==1.19.1
+mypy-extensions==1.1.0
+networkx==3.6.1
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+pandas==2.3.3
+pathspec==1.0.3
+pillow==12.1.0
+platformdirs==4.5.1
+propcache==0.4.1
+protobuf==6.33.4
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytokens==0.3.0
+pytorch-lightning==2.6.0
+pytz==2025.2
+pyyaml==6.0.3
+requests==2.32.5
+scikit-learn==1.8.0
+scipy==1.17.0
+setuptools==70.2.0
+six==1.17.0
+sympy==1.14.0
+text-unidecode==1.3
+threadpoolctl==3.6.0
+torchmetrics==1.8.2
+tqdm==4.67.1
+types-requests==2.32.4.20260107
+types-tqdm==4.67.0.20250809
+typing-extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+webencodings==0.5.1
+yarl==1.22.0
